# linkace-cli

./: Makefile  README.md  config.example.toml  pyproject.toml
.circleci/: config.yml
linkace_cli/: __init__.py
linkace_cli/api/: __init__.py  base.py  links.py  lists.py  search.py  tags.py
linkace_cli/cli/: helpers.py  links.py  lists.py  search.py  tags.py
linkace_cli/cli/templates/: link.toml  list.toml  tag.toml
linkace_cli/models/: __init__.py  link.py  list.py  note.py  order.py  tag.py
tests/: test_api.py  test_linkace-cli.py  test_models.py
tests/fixtures/api/: links_create.json  links_get_one.json  links_get_page1.json  links_get_page2.json  links_update.json  lists_create.json  lists_get_one.json  lists_get_page1.json  lists_get_page2.json  lists_update.json  tags_get_one.json  tags_get_page1.json  tags_get_page2.json  tags_update.json
tests/fixtures/models/: link.json  list.json  note.json  tag.json
